cabal-version: 3.0
name:          cardano-lab 
version:       0.0.1
synopsis:      The Cardano Lab 
author:        Sasha Bogicevic 
copyright:     2023 Devnull 
license:       Apache-2.0

source-repository head
  type:     git
  location: https://github.com/v0d1ch/cardano-lab

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    Cardano.Hydra
    Cardano.Mithril
    Cardano.Node
    Cardano.Util
    Lab
    Lab2

  build-depends:
    , base
    , cardano-api      >=1.36.0
    , cardano-prelude
    , directory
    , filepath
    , free
    , lens
    , lens-aeson
    , process
    , raw-strings-qq
    , text

  ghc-options:     -haddock

executable cardano-lab-exe
  import:         project-config
  hs-source-dirs: exe
  main-is:        Main.hs
  other-modules:
  build-depends:
    , cardano-lab
    , cardano-prelude

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N4

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  other-modules:
    Spec
    Test.ExeSpec

  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , hspec
    , process

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts
