cabal-version: 3.0
name:          easy-rider 
version:       0.0.1
synopsis:      Easy Rider 
author:        Devnull org 
copyright:     2023 Devnull 
license:       Apache-2.0

source-repository head
  type:     git
  location: https://github.com/v0d1ch/easy-rider

common project-config
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    EmptyDataDecls
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeSynonymInstances
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fprint-potential-instances

library
  import:          project-config
  hs-source-dirs:  src
  exposed-modules:
    Cardano.Hydra
    Cardano.Mithril
    Cardano.Node
    Cardano.Util
    Options

  build-depends:
    , base
    , cardano-api
    , cardano-prelude
    , directory
    , filepath
    , lens
    , lens-aeson
    , optparse-applicative
    , process
    , text

  ghc-options:     -haddock

executable easy-rider-exe
  import:         project-config
  hs-source-dirs: exe
  main-is:        Main.hs
  other-modules:
  build-depends:
    , cardano-prelude
    , easy-rider

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N4

test-suite tests
  import:             project-config
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:     test
  other-modules:
    Spec
    Test.ExeSpec

  main-is:            Main.hs
  type:               exitcode-stdio-1.0
  build-depends:
    , base
    , hspec
    , process

  build-tool-depends: hspec-discover:hspec-discover
  ghc-options:        -threaded -rtsopts
